--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "EstacionaFacilDb": "Data Source=DESKTOP-BLC9KRV\\MSSQLSERVER1;Initial Catalog=TestRhitmo;User ID=sa;Password=1234567;TrustServerCertificate=True"
+    "RhitmoDb": "Data Source=DESKTOP-BLC9KRV\\MSSQLSERVER1;Initial Catalog=TestRhitmo;User ID=sa;Password=1234567;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
@@ -9,5 +9,6 @@
     }
   },
   "SecretKey": "MySecrectKeyForRhitmo123",
+  "Salt":  "ska2als"
 }
 
