feat: creating crud methods

--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -8,7 +8,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "SecretKey": "MySecrectKeyForRhitmo123",
-  "Salt":  "ska2als"
+  "SecretKey": "MySecrectKeyForRhitmo123"
 }
 
