feat: creating search by cep

--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -8,6 +8,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "SecretKey": "MySecrectKeyForRhitmo123"
+  "SecretKey": "MySecrectKeyForRhitmo123",
+  "External": {
+    "ViaCepBaseUrl": "https://viacep.com.br/ws/"
+  }
 }
 
