--- a/CrossCuting/Infra.CrossCuting.csproj
+++ b/CrossCuting/Infra.CrossCuting.csproj
@@ -13,6 +13,7 @@
     <ItemGroup>
       <ProjectReference Include="..\Application\Application.csproj" />
       <ProjectReference Include="..\Infra.Auth\Infra.Auth.csproj" />
+      <ProjectReference Include="..\Infra.External\Infra.External.csproj" />
     </ItemGroup>
 
 </Project>
